# ADXTools

./: README.md  pyproject.toml  setup.py
ADXConvert/: to_adx.py  to_wav.py
AHXConvert/: ahxbap24.bap  ahxbap44.bap  to_ahx.py  to_wav.py
AIXMaker/: aixmaker.py
adxtools/: __main__.py  ahx_conversion.py  ahxbap22.bap  ahxbap48.bap  main.py
adxtools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
